--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "gulp-run": "^1.7.1",
     "markdown-magic": "^1.0.0",
     "markdown-magic-dependency-table": "^1.3.2",
-    "markdown-magic-directory-tree": "^1.2.3"
+    "markdown-magic-directory-tree": "^1.2.3",
+    "nodemon": "^2.0.3"
   },
   "dependencies": {
     "installerzen": "^1.0.12"
