--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "markdown-magic": "^1.0.0",
     "markdown-magic-dependency-table": "^1.3.2",
     "markdown-magic-directory-tree": "^1.2.3",
+    "markdown-magic-version-badge": "^1.1.1",
     "nodemon": "^2.0.3"
   },
   "dependencies": {
